<resources>

    <string name="app_name">Jsem FIT</string>
    <string name="title_activity_bottom">Bottom</string>
    <string name="title_home">Předměty</string>
    <string name="title_calendar">Kalendář</string>
    <string name="title_Week">Rozvrh</string>
    <string name="title_list">Termíny</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="user_name">Jméno</string>
    <string name="user_password">Heslo</string>
    <string name="btn_login">Přihlásit</string>

    <string-array name="subjects_color">
        <item>#00a400</item>
        <item>#e09400</item>
        <item>#0d86ba</item>
    </string-array>

    <string-array name="header_title">
        <item></item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
    </string-array>

    <string-array name="days">
        <item >Mon</item>
        <item >Tue</item>
        <item >Wed</item>
        <item >Thu</item>
        <item >Fri</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>