<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wis.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.wis.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/navigation_Week"
        android:name="com.example.wis.ui.calendar.WeekViewActivity"
        android:label="@string/title_Week"
        tools:layout="@layout/fragment_week_view" />
    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.wis.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />
</navigation>